<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageWelcome"
        android:layout_width="match_parent"
        android:scaleType="centerInside"
        android:layout_marginTop="10dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_height="0dp"
        android:layout_weight="0.65"
         />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="0dp"
        android:layout_weight="0.2">
        <Button
            android:background="@drawable/button_bgcolor"
            android:textColor="#acaae4"
            android:text="@string/scan"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:id="@+id/btnScan"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:background="@drawable/button_bgcolor"
            android:textColor="#acaae4"
            android:text="@string/folder"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:id="@+id/btnFolder"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:background="@drawable/button_bgcolor"
            android:textColor="#acaae4"
            android:text="@string/setting"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:id="@+id/btnSetting"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>
